// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update should do immutable update 1`] = `
Object {
  "parent": Object {
    "another": "foo",
    "target": Object {
      "field": 1,
    },
  },
  "reflector": Reflector {
    "id": 1,
    "seq": 1,
    "value": Object {
      "field": 1,
    },
  },
}
`;

exports[`update should handle the same and undefined return value 1`] = `
Object {
  "parent": Object {
    "another": "foo",
    "target": Object {
      "field": 0,
    },
  },
  "reflector": Reflector {
    "id": 1,
    "seq": 1,
    "value": Object {
      "field": 0,
    },
  },
}
`;
